--- a/index.html
+++ b/index.html
@@ -123,9 +123,9 @@
 
             <!--Links-->
             <section>
-                <a target="_bLank" href="#"></a><br>
-                <a target="_bLank" href="#"></a><br>
-                <a target="_bLank" href="#"></a><br>
+                <a target="_bLank" href="https://rank-fortress-digital-agency.github.io/abacassolution-09-22/">https://rank-fortress-digital-agency.github.io/abacassolution-09-22/</a><br>
+                <a target="_bLank" href="http://abacassolution-09-22.s3-website.ap-south-1.amazonaws.com">http://abacassolution-09-22.s3-website.ap-south-1.amazonaws.com</a><br>
+                <a target="_bLank" href="https://warm-malasada-fb3162.netlify.app/">https://warm-malasada-fb3162.netlify.app/</a><br>
             </section>
 
         </div>
